[package]
name = "rusty-fireworks"
version = "0.1.0"
authors = ["Stephen Drodge <stephen.drodge@gmail.com>"]
edition = "2018"
description = "A web server for playing Hanabi online."
readme = "README.md"
repository = "https://github.com/sjdrodge/rusty-fireworks/"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
