[package]
name = "rusty-fireworks"
version = "0.1.0"
authors = ["Stephen Drodge <stephen.drodge@gmail.com>"]
edition = "2018"
description = "A web server for playing Hanabi online."
readme = "README.md"
repository = "https://github.com/sjdrodge/rusty-fireworks/"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.32"
async-trait = "^0.1.38"
cookie = "^0.14.2"
env_logger = "^0.7.1"
futures = "^0.3.5"
hmac = "^0.8.1"
http = "^0.2.1"
jwt = "^0.10.0"
log = "^0.4.11"
once_cell = "^1.4.1"
serde_json = "^1.0.57"
sha2 = "^0.9.1"
thiserror = "^1.0.20"
tokio = { version = "^0.2", features = ["full"] }
tokio-tungstenite = "^0.11.0"
tungstenite = "^0.11.1"
